Add notice for experimental decryption with root

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -393,4 +393,11 @@
     <string name="warning">Warning</string>
     <string name="paid_features_unlocked">Paid features unlocked. Restart the capture if running</string>
     <string name="build_info">Build info</string>
+    <string name="tls_decryption_with_root_msg">The ability to run TLS decryption with root is an experimental feature. This is a list of known bugs:\n\n
+- in PCAPdroid you will see the traffic as it was generated from the mitm-addon app in place of the original app\n
+- when an app filter is set, decryption will only occur for the target app, but PCAPdroid will still show the other apps traffic\n
+- if the capture fails to start, ensure that you can actually run the iptables command as root (e.g. via termux)\n
+- this may not work on Android 12 and later\n
+- if a VPN app is running, you should either target a specific app for decryption or exclude the PCAPdroid mitm addon from the VPN, otherwise traffic will go in a loop
+</string>
 </resources>
