--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -412,4 +412,17 @@
     <string name="remote_collector_notice">你已经将 PCAPdroid 配置为将流量发送到远程服务器。该服务器将能够访问你的敏感信息。
 \n
 \n如果有人让你这样做，这可能是一个骗局</string>
+    <string name="warning">警告</string>
+    <string name="app_unblocked">已解除对 %1$s 应用的封锁</string>
+    <string name="build_info">构建信息</string>
+    <string name="paid_features_unlocked">付费功能已解锁。 如果正在运行，请重启流量捕获</string>
+    <string name="unblock_for_n_minutes">解封 %1$d 分钟</string>
+    <string name="install_the_mitm_addon">安装 PCAPdroid <a href="%1$s">mitm 附加组件</a></string>
+    <string name="tls_decryption_with_root_msg">使用 root 权限运行 TLS 解密是一项实验性功能。 这是已知错误的列表：:
+\n
+\n - 在 PCAPdroid 中，流量看起来像是从 mitm-addon 应用生成的，而不是原始应用程序
+\n - 设置应用过滤器后，只会对目标应用进行解密，但 PCAPdroid 仍会显示其他应用的流量
+\n - 如果流量捕获无法启动，请确保你实际上可以以 root 身份运行 iptables 命令（例如，通过 termux）
+\n - 此功能可能不适用于 Android 12 及更高版本
+\n - 如果 VPN 应用正在运行，你应该针对特定应用进行解密或从 VPN 中排除 PCAPdroid mitm 附加组件，否则流量将进入循环</string>
 </resources>
