Update French strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
     <string name="duration">Durée</string>
     <string name="http_server">Serveur HTTP</string>
     <string name="udp_exporter">Exporteur UDP</string>
-    <string name="no_dump">Aucun</string>
+    <string name="no_dump">Aucune extraction</string>
     <string name="user_guide">Guide d\'utilisation</string>
     <string name="open_telegram_group">Groupe Telegram</string>
     <string name="source_code">Code source</string>
@@ -47,7 +47,7 @@
     <string name="first_seen">Début</string>
     <string name="last_seen">Fin</string>
     <string name="conn_status_closed">Terminée</string>
-    <string name="copy_to_clipboard">Copier dans le presse-papiers</string>
+    <string name="copy_to_clipboard">Copier</string>
     <string name="save_to_file">Enregistrer dans un fichier</string>
     <string name="older_connections_notice">%1$d anciennes connexions non affichées</string>
     <string name="error">Erreur</string>
@@ -100,7 +100,7 @@
     <string name="loading_apps">Chargement des applis…</string>
     <string name="close_nav_drawer">Fermer le menu</string>
     <string name="capture_all_apps">Capturer le trafic de toutes les applications</string>
-    <string name="no_dump_info">Les PCAP ne seront pas extraits</string>
+    <string name="no_dump_info">Le trafic ne sera pas extrait</string>
     <string name="http_server_info">Démarrer un serveur HTTP pour le téléchargement du PCAP</string>
     <string name="udp_exporter_info">Envoie le PCAP à un receveur UCP distant</string>
     <string name="open_sockets">Ouvrir les sockets</string>
@@ -194,7 +194,7 @@
     <string name="block">Bloquer…</string>
     <string name="firewall">Par-feu</string>
     <string name="blocked_pkts">Bloqué</string>
-    <string name="blocked_connection_filter">bloqué</string>
+    <string name="blocked_connection_filter">Bloqué</string>
     <string name="validate">Valider</string>
     <string name="valid">Valide</string>
     <string name="invalid">Invalide</string>
@@ -279,4 +279,34 @@
     <string name="firewall_is_enabled">Le pare-feu est actif</string>
     <string name="num_configured_rules">Règles configurées</string>
     <string name="action_unblock">Débloquer</string>
+    <string name="show_only_cleartext">Connections en clair</string>
+    <string name="firewall_filter">Pare-feu : %1$s</string>
+    <string name="ip_both">IPv4 et IPv6</string>
+    <string name="unblock_for_n_hours">Débloquer pour %1$dh</string>
+    <string name="cleartext_connection">En clair</string>
+    <string name="no_matches_found">Aucune correspondance</string>
+    <string name="unblock_permanently">Débloqué en permanence</string>
+    <string name="app_blocked">Application bloquée</string>
+    <string name="show_data_action">Afficher les données</string>
+    <string name="allowed_connection_filter">Autorisé</string>
+    <string name="country_and_asn">Pays et ASN</string>
+    <string name="low_memory">Mémoire basse</string>
+    <string name="memory_usage">Utilisation de la mémoire</string>
+    <string name="ipv4_only">IPv4 uniquement</string>
+    <string name="traffic_dump">Extraction du trafic</string>
+    <string name="tls_decryption_running">Le décryptage TLS est en cours</string>
+    <string name="tls_decryption_starting">Le décryptage TLS commence…</string>
+    <string name="payload">Payload</string>
+    <string name="block_private_dns">Bloquer les DNS privés</string>
+    <string name="app_intro_next_button">Suivant</string>
+    <string name="app_intro_skip_button">Passer</string>
+    <string name="app_intro_back_button">Retour</string>
+    <string name="app_intro_done_button">Terminé</string>
+    <string name="welcome_to_pcapdroid">Bienvenue sur PCAPdroid</string>
+    <string name="socks5_info">Proxy SOCKS5 : %1$s:%2$d</string>
+    <string name="cancel_action">Annuler</string>
+    <string name="warning">Attention</string>
+    <string name="ipv6_only">IPv6 uniquement</string>
+    <string name="build_info">Informations de la version</string>
+    <string name="unblock_for_n_minutes">Débloquer pour %1$dm</string>
 </resources>
